make own fruitShop