@@ -1,8 +1,8 @@
 package core.basesyntax.service.impl;
 
 import core.basesyntax.service.WriteToFile;
+
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -12,7 +12,7 @@ public class WriteToFileImpl implements WriteToFile {
     public String write(String report, String path) {
         Path filePath = Path.of(path);
         try {
-            Files.write(filePath, report.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(filePath, report);
             return "Data was written to file " + filePath;
         } catch (IOException e) {
             throw new RuntimeException("Can`t write to file: " + path, e);
